@@ -3,121 +3,101 @@ FROM openjdk:8-jdk
 LABEL maintainer="info@redmic.es"
 
 ENV DEBIAN_FRONTEND="noninteractive" \
-    GEOSERVER_PLUGINS="css inspire libjpeg-turbo csw wps pyramid vectortiles netcdf gdal importer netcdf-out" \
-    GEOSERVER_COMMUNITY_PLUGINS="gwc-s3 hz-cluster" \
-    GEOSERVER_MAJOR_VERSION="2.12" \
-    GEOSERVER_MINOR_VERSION="5" \
-    GEOSERVER_DATA_DIR="/var/geoserver/data" \
-    GEOSERVER_HOME="/opt/geoserver" \
-    GEOSERVER_LOG_DIR="/var/log/geoserver" \
-    GEOSERVER_OPTS="-server \
-     -XX:+AggressiveOpts \
-     -XX:+HeapDumpOnOutOfMemoryError \
-     -XX:MaxNewSize=256m \
-     -XX:NewSize=256m \
-     -XX:MaxMetaspaceSize=128m \
-     -XX:SurvivorRatio=12 \
-     -XX:MaxTenuringThreshold=0 \
-     -XX:+UseConcMarkSweepGC \
-     -XX:+CMSIncrementalMode \
-     -XX:+CMSIncrementalPacing \
-     -XX:+CMSClassUnloadingEnabled \
-     -XX:+DisableExplicitGC \
-     -XX:+UseTLAB \
-     -XX:SoftRefLRUPolicyMSPerMB=36000 \
-     -XX:PerfDataSamplingInterval=500 \
-     -XX:+UnlockExperimentalVMOptions \
-     -XX:+UseCGroupMemoryLimitForHeap \
-     -XX:MaxRAMFraction=1 \
-     -Djava.awt.headless=true \
-     -Dorg.geotools.referencing.forceXY=true \
-     -Djava.library.path=/usr/share/java:/opt/libjpeg-turbo/lib64:/usr/lib/jni" \
-    GOOGLE_FONTS="Open%20Sans Roboto Lato Ubuntu" \
-    NOTO_FONTS="NotoSans-unhinted NotoSerif-unhinted NotoMono-hinted" \
-    GEOSERVER_PORT="8080" \
-    SYNC_MODE="event" \
-    SYNC_DELAY="0" \
-    CLUSTER_NAME="geoserver-cluster" \
-    CLUSTER_PASSWORD="changeme" \
-    SESSION_STICKY="true" \
-    HAZELCAST_PORT="5701"
+	GEOSERVER_PLUGINS="css inspire libjpeg-turbo csw wps pyramid vectortiles netcdf gdal importer netcdf-out" \
+	GEOSERVER_COMMUNITY_PLUGINS="gwc-s3" \
+	GEOSERVER_MAJOR_VERSION="2.12" \
+	GEOSERVER_MINOR_VERSION="5" \
+	GEOSERVER_DATA_DIR="/var/geoserver/data" \
+	GEOSERVER_HOME="/opt/geoserver" \
+	GEOSERVER_LOG_DIR="/var/log/geoserver" \
+	GEOSERVER_OPTS="-Djava.awt.headless=true \
+		-server \
+		-XX:PerfDataSamplingInterval=500 \
+		-Dorg.geotools.referencing.forceXY=true \
+		-XX:SoftRefLRUPolicyMSPerMB=36000  \
+		-XX:NewRatio=2 \
+		-XX:+CMSClassUnloadingEnabled \
+		-Djavax.servlet.request.encoding=UTF-8 \
+		-Djavax.servlet.response.encoding=UTF-8 \
+		-Dorg.geotools.shapefile.datetime=true \
+		-XX:+UnlockExperimentalVMOptions \
+		-XX:MaxRAMFraction=2 \
+		-XX:+AggressiveOPT \
+		-XX:+UseCGroupMemoryLimitForHeap \
+		-Djava.library.path=/usr/share/java:/opt/libjpeg-turbo/lib64:/usr/lib/jni" \
+	GOOGLE_FONTS="Open%20Sans Roboto Lato Ubuntu" \
+	NOTO_FONTS="NotoSans-unhinted NotoSerif-unhinted NotoMono-hinted" \
+	GEOSERVER_PORT="8080"
 
 ENV GEOSERVER_VERSION="${GEOSERVER_MAJOR_VERSION}.${GEOSERVER_MINOR_VERSION}" \
-    GEOSERVER_LOG_LOCATION="${GEOSERVER_LOG_DIR}/geoserver.log" \
-    GDAL_DATA="/usr/share/gdal/2.1"
+	GEOSERVER_LOG_LOCATION="${GEOSERVER_LOG_DIR}/geoserver.log" \
+	GDAL_DATA="/usr/share/gdal/2.1"
 
 ARG TEMP_PATH=/tmp/resources
 
-RUN mkdir -p "${TEMP_PATH}" && \
-    mkdir -p "${GEOSERVER_DATA_DIR}" && \
-    mkdir -p "${GEOSERVER_LOG_DIR}"
-
-COPY ./scripts /
-
 # Install extra fonts to use with sld font markers
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends fonts-cantarell \
-        lmodern \
-        ttf-aenigma \
-        ttf-georgewilliams \
-        ttf-bitstream-vera \
-        ttf-sjfonts \
-        tv-fonts \
-        fonts-lyx \
-        libtcnative-1 \
-        libgdal20 \
-        libgdal-java \
-        libnetcdf11 \
-        libnetcdf-c++4 \
-        netcdf-bin \
-        gettext-base
+RUN mkdir -p "${TEMP_PATH}" "${GEOSERVER_DATA_DIR}" "${GEOSERVER_LOG_DIR}" && \
+	apt-get update && \
+	apt-get install -y --no-install-recommends fonts-cantarell \
+		lmodern \
+		ttf-aenigma \
+		ttf-georgewilliams \
+		ttf-bitstream-vera \
+		ttf-sjfonts \
+		tv-fonts \
+		fonts-lyx \
+		libtcnative-1 \
+		libgdal20 \
+		libgdal-java \
+		libnetcdf11 \
+		libnetcdf-c++4 \
+		netcdf-bin \
+		dnsutils
 
 # Copy resources
 # Install Google Noto fonts
 RUN mkdir -p /usr/share/fonts/truetype/noto && \
-    for FONT in ${NOTO_FONTS}; \
-    do \
-        if [ ! -f ${TEMP_PATH}/${FONT}.zip ]; then \
-            curl -L https://noto-website-2.storage.googleapis.com/pkgs/${FONT}.zip --output ${TEMP_PATH}/${FONT}.zip ; \
-        fi; \
-        unzip -o ${TEMP_PATH}/${FONT}.zip -d /usr/share/fonts/truetype/noto ; \
-    done
+	for FONT in ${NOTO_FONTS}; \
+	do \
+		if [ ! -f ${TEMP_PATH}/${FONT}.zip ]; then \
+			curl -L https://noto-website-2.storage.googleapis.com/pkgs/${FONT}.zip --output ${TEMP_PATH}/${FONT}.zip ; \
+		fi; \
+		unzip -o ${TEMP_PATH}/${FONT}.zip -d /usr/share/fonts/truetype/noto ; \
+	done
 
 # Install Google Fonts
 RUN for FONT in ${GOOGLE_FONTS}; \
-    do \
-        mkdir -p /usr/share/fonts/truetype/${FONT} && \
-        if [ ! -f ${TEMP_PATH}/${FONT}.zip ]; then \
-            curl -L "https://fonts.google.com/download?family=${FONT}" --output ${TEMP_PATH}/${FONT}.zip ; \
-        fi; \
-        unzip -o ${TEMP_PATH}/${FONT}.zip -d /usr/share/fonts/truetype/${FONT} ; \
-    done
+	do \
+		mkdir -p /usr/share/fonts/truetype/${FONT} && \
+		if [ ! -f ${TEMP_PATH}/${FONT}.zip ]; then \
+			curl -L "https://fonts.google.com/download?family=${FONT}" --output ${TEMP_PATH}/${FONT}.zip ; \
+		fi; \
+		unzip -o ${TEMP_PATH}/${FONT}.zip -d /usr/share/fonts/truetype/${FONT} ; \
+	done
 
 # Install GeoServer
 RUN FILENAME="geoserver-${GEOSERVER_VERSION}-bin.zip" && \
-    if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
-        URL="https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}" && \
-        curl -L ${URL}/${FILENAME} -o ${TEMP_PATH}/${FILENAME} ; \
-    fi; \
-    unzip -o ${TEMP_PATH}/${FILENAME} -d /opt/ && \
-    mv -v ${GEOSERVER_HOME}* ${GEOSERVER_HOME} && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/coverages && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/data && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/demo && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/gwc-layers && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/layergroups && \
-    rm -rf ${GEOSERVER_HOME}/data_dir/workspaces && \
-    mv -f /web.xml ${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/web.xml
-
+	if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
+		URL="https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}" && \
+		curl -L ${URL}/${FILENAME} -o ${TEMP_PATH}/${FILENAME} ; \
+	fi; \
+	unzip -o ${TEMP_PATH}/${FILENAME} -d /opt/ && \
+	mv -v ${GEOSERVER_HOME}* ${GEOSERVER_HOME} && \
+	rm -rf ${GEOSERVER_HOME}/data_dir/coverages/* \
+		${GEOSERVER_HOME}/data_dir/data/* \
+		${GEOSERVER_HOME}/data_dir/demo/* \
+		${GEOSERVER_HOME}/data_dir/gwc-layers/* \
+		${GEOSERVER_HOME}/data_dir/layergroups/* \
+		${GEOSERVER_HOME}/data_dir/workspaces/*
 
 # Install Marlin
 ARG MARLIN_VERSION=0.9.1
 RUN FILENAME=$(echo "marlin-${MARLIN_VERSION}-Unsafe.jar") && \
-    if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
-        URL="https://github.com/bourgesl/marlin-renderer/releases/download/v0_9_1//${FILENAME}" && \
-        curl -L ${URL} --output ${TEMP_PATH}/${FILENAME} ; \
-    fi; \
-    cp ${TEMP_PATH}/${FILENAME} ${GEOSERVER_HOME}/lib
+	if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
+		URL="https://github.com/bourgesl/marlin-renderer/releases/download/v0_9_1//${FILENAME}" && \
+		curl -L ${URL} --output ${TEMP_PATH}/${FILENAME} ; \
+	fi; \
+	cp ${TEMP_PATH}/${FILENAME} ${GEOSERVER_HOME}/lib
 
 # El espacio final es necesario, corrige bug en script de arranque
 ENV MARLIN_JAR="${GEOSERVER_HOME}/lib/marlin-${MARLIN_VERSION}-Unsafe.jar "
@@ -125,74 +105,76 @@ ENV MARLIN_JAR="${GEOSERVER_HOME}/lib/marlin-${MARLIN_VERSION}-Unsafe.jar "
 # Install Turbo JPEG
 ARG TURBO_JPEG_VERSION=1.5.3
 RUN TURBO_JPEG_FILENAME=$(echo "libjpeg-turbo-official_${TURBO_JPEG_VERSION}_amd64.deb") && \
-    if [ ! -f ${TEMP_PATH}/${TURBO_JPEG_FILENAME} ]; then \
-        URL="https://sourceforge.net/projects/libjpeg-turbo/files/${TURBO_JPEG_VERSION}/${TURBO_JPEG_FILENAME}" && \
-        curl -L ${URL} --output ${TEMP_PATH}/${TURBO_JPEG_FILENAME} ; \
-    fi; \
-    dpkg -i ${TEMP_PATH}/${TURBO_JPEG_FILENAME}
+	if [ ! -f ${TEMP_PATH}/${TURBO_JPEG_FILENAME} ]; then \
+		URL="https://sourceforge.net/projects/libjpeg-turbo/files/${TURBO_JPEG_VERSION}/${TURBO_JPEG_FILENAME}" && \
+		curl -L ${URL} --output ${TEMP_PATH}/${TURBO_JPEG_FILENAME} ; \
+	fi; \
+	dpkg -i ${TEMP_PATH}/${TURBO_JPEG_FILENAME}
 
 # Install JAI & Image IO
 ARG JAI_VERSION=1_1_3
 ARG IMAGE_IO_VERSION=1_1
 
 RUN rm ${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/jai_*jar && \
-    cd ${JAVA_HOME} && \
-    echo ${JAVA_HOME} && \
-    JAI_FILENAME=$(echo "jai-${JAI_VERSION}-lib-linux-amd64-jdk.bin") && \
-    if [ ! -f ${TEMP_PATH}/${JAI_FILENAME} ]; then \
-        URL="http://data.boundlessgeo.com/suite/jai/${JAI_FILENAME}" && \
-        curl -L ${URL} --output ${TEMP_PATH}/${JAI_FILENAME} ; \
-    fi; \
-    mv ${TEMP_PATH}/${JAI_FILENAME} ${JAVA_HOME} && \
-    echo "yes" | sh ${JAI_FILENAME} && \
-    rm ${JAI_FILENAME} && \
-    export _POSIX2_VERSION=199209 && \
-    IMAGE_IO_FILENAME="jai_imageio-${IMAGE_IO_VERSION}-lib-linux-amd64-jdk.bin" && \
-    if [ ! -f ${TEMP_PATH}/${IMAGE_IO_FILENAME} ]; then \
-        URL="http://data.opengeo.org/suite/jai/${IMAGE_IO_FILENAME}" && \
-        curl -L ${URL} --output ${TEMP_PATH}/${IMAGE_IO_FILENAME} ; \
-    fi; \
-    mv ${TEMP_PATH}/${IMAGE_IO_FILENAME} ${JAVA_HOME} && \
-    echo "yes" | sh ${IMAGE_IO_FILENAME} && \
-    rm ${IMAGE_IO_FILENAME}
+	cd ${JAVA_HOME} && \
+	echo ${JAVA_HOME} && \
+	JAI_FILENAME=$(echo "jai-${JAI_VERSION}-lib-linux-amd64-jdk.bin") && \
+	if [ ! -f ${TEMP_PATH}/${JAI_FILENAME} ]; then \
+		URL="http://data.boundlessgeo.com/suite/jai/${JAI_FILENAME}" && \
+		curl -L ${URL} --output ${TEMP_PATH}/${JAI_FILENAME} ; \
+	fi; \
+	mv ${TEMP_PATH}/${JAI_FILENAME} ${JAVA_HOME} && \
+	echo "yes" | sh ${JAI_FILENAME} && \
+	rm ${JAI_FILENAME} && \
+	export _POSIX2_VERSION=199209 && \
+	IMAGE_IO_FILENAME="jai_imageio-${IMAGE_IO_VERSION}-lib-linux-amd64-jdk.bin" && \
+	if [ ! -f ${TEMP_PATH}/${IMAGE_IO_FILENAME} ]; then \
+		URL="http://data.opengeo.org/suite/jai/${IMAGE_IO_FILENAME}" && \
+		curl -L ${URL} --output ${TEMP_PATH}/${IMAGE_IO_FILENAME} ; \
+	fi; \
+	mv ${TEMP_PATH}/${IMAGE_IO_FILENAME} ${JAVA_HOME} && \
+	echo "yes" | sh ${IMAGE_IO_FILENAME} && \
+	rm ${IMAGE_IO_FILENAME}
 
 # Install GeoServer Plugins
 RUN URL="https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}/extensions" && \
-    for PLUGIN in ${GEOSERVER_PLUGINS}; \
-    do \
-        FILENAME="geoserver-${GEOSERVER_VERSION}-${PLUGIN}-plugin.zip" && \
-        if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
-            curl -L "${URL}/${FILENAME}" -o "${TEMP_PATH}/${FILENAME}" ; \
-        fi; \
-        unzip -o "${TEMP_PATH}/${FILENAME}" -d "${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/" ; \
-    done
+	for PLUGIN in ${GEOSERVER_PLUGINS}; \
+	do \
+		FILENAME="geoserver-${GEOSERVER_VERSION}-${PLUGIN}-plugin.zip" && \
+		if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
+			curl -L "${URL}/${FILENAME}" -o "${TEMP_PATH}/${FILENAME}" ; \
+		fi; \
+		unzip -o "${TEMP_PATH}/${FILENAME}" -d "${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/" ; \
+	done
 
 # Install GeoServer Community Plugins
 RUN URL="http://ares.boundlessgeo.com/geoserver/${GEOSERVER_MAJOR_VERSION}.x/community-latest" && \
-    for PLUGIN in ${GEOSERVER_COMMUNITY_PLUGINS}; \
-    do \
-        FILENAME="geoserver-${GEOSERVER_MAJOR_VERSION}-SNAPSHOT-${PLUGIN}-plugin.zip" && \
-        if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
-            curl -L ${URL}/${FILENAME} -o ${TEMP_PATH}/${FILENAME} ; \
-        fi; \
-        unzip -o ${TEMP_PATH}/${FILENAME} -d ${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/ ; \
-    done
+	for PLUGIN in ${GEOSERVER_COMMUNITY_PLUGINS}; \
+	do \
+		FILENAME="geoserver-${GEOSERVER_MAJOR_VERSION}-SNAPSHOT-${PLUGIN}-plugin.zip" && \
+		if [ ! -f ${TEMP_PATH}/${FILENAME} ]; then \
+			curl -L ${URL}/${FILENAME} -o ${TEMP_PATH}/${FILENAME} ; \
+		fi; \
+		unzip -o ${TEMP_PATH}/${FILENAME} -d ${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/ ; \
+	done
 
 ARG GDAL_VERSION="2.1.2"
 RUN rm ${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/imageio-ext-gdal-bindings-*.jar && \
-    ln -s /usr/share/java/gdal.jar \
-        "${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/imageio-ext-gdal-bindings-${GDAL_VERSION}.jar"
+	ln -s /usr/share/java/gdal.jar \
+		"${GEOSERVER_HOME}/webapps/geoserver/WEB-INF/lib/imageio-ext-gdal-bindings-${GDAL_VERSION}.jar"
 
 # Clean
 RUN rm -fr ${TEMP_PATH} && \
-    rm -rf /var/lib/apt/lists/* && \
-    apt-get clean && \
-    useradd geoserver && \
-    chown -R geoserver:geoserver "${GEOSERVER_DATA_DIR}" && \
-    chown -R geoserver:geoserver "${GEOSERVER_HOME}" && \
-    chown -R geoserver:geoserver "${GEOSERVER_LOG_DIR}"
+	rm -rf /var/lib/apt/lists/* && \
+	apt-get clean && \
+	useradd geoserver && \
+	chown -R geoserver:geoserver "${GEOSERVER_DATA_DIR}" && \
+	chown -R geoserver:geoserver "${GEOSERVER_HOME}" && \
+	chown -R geoserver:geoserver "${GEOSERVER_LOG_DIR}"
 
 USER geoserver
+
+COPY ./scripts /
 
 EXPOSE ${GEOSERVER_PORT}
 
